--- a/Homework-1/Style-for-index-manual.css
+++ b/Homework-1/Style-for-index-manual.css
@@ -16,3 +16,10 @@ h2 {
   .center-list {
   text-align: center;
 }
+  img {
+      float: center;
+      margin-left: 0px;
+      margin-right: 0px;
+      border: 5px solid #4c057b;
+      border-radius: 10px;
+    }
